# Project_Qt

./: CMakeLists.txt  Main.qml  README.md  climateengine.cpp  climateengine.h  info.yaml  main.cpp  mdaengine.h
MediaPlayer/: CMakeLists.txt  main.cpp
MediaPlayer/screen/: utils.js
MediaPlayer/screen/components/music/: Controller.qml  Player.qml
MediaPlayer/screen/features/: MusicPlayer.qml
MediaPlayer/src/: common.cpp  common.h
MediaPlayer/src/handler/: media_handler.cpp  media_handler.h
MediaPlayer/src/provider/: image_provider.cpp  image_provider.h
MediaPlayer/src/utils/: tagmeta.cpp  tagmeta.h
fresher_k1_cpp_media/: info.yaml  main.cpp
fresher_k1_cpp_media/models/: CMakeLists.txt
fresher_k1_cpp_media/screens/: mdascreen.qml
models/: CMakeLists.txt  climodel.cpp  climodel.h
screens/: AdjustTemp.qml  CMakeLists.txt  Climate.qml  HeatSeats.qml  MiddleBar.qml  climatescreen.qml
